--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ node_modules
 dist
 dist-ssr
 build
+Sqlite3.db
 
 # Environment variables
 .env
@@ -33,3 +34,4 @@ build
 *.njsproj
 *.sln
 *.sw?
+.env
