--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,11 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "libreoffice-convert": "^1.6.1",
     "mssql": "^11.0.1",
+    "multer": "^2.0.1",
     "odbc": "^2.4.9",
+    "soffice": "^1.1.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
