--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "multer": "^2.0.1",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
